--- a/package.json
+++ b/package.json
@@ -1,38 +1,48 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.16",
-    "@mui/material": "^5.14.17",
-    "@reduxjs/toolkit": "^1.9.7",
-    "@tanstack/react-query": "^5.8.1",
-    "axios": "^1.6.1",
-    "formik": "^2.4.5",
-    "next": "14.0.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-redux": "^8.1.3",
-    "redux": "^4.2.1",
-    "yup": "^1.3.2"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
-  }
+     "name": "my-app",
+     "version": "0.1.0",
+     "private": true,
+     "scripts": {
+          "dev": "next dev",
+          "build": "next build",
+          "start": "next start",
+          "lint": "next lint",
+          "lint:fix": "eslint . --fix"
+     },
+     "dependencies": {
+          "@emotion/react": "^11.11.1",
+          "@emotion/styled": "^11.11.0",
+          "@mui/icons-material": "^5.14.16",
+          "@mui/material": "^5.14.17",
+          "@reduxjs/toolkit": "^1.9.7",
+          "@tailwindcss/forms": "^0.5.7",
+          "@tanstack/react-query": "^5.8.1",
+          "axios": "^1.6.1",
+          "formik": "^2.4.5",
+          "jsonwebtoken": "^9.0.2",
+          "jwt-decode": "^4.0.0",
+          "next": "14.0.1",
+          "next-auth": "^4.24.5",
+          "next-client-cookies": "^1.0.6",
+          "react": "^18",
+          "react-dom": "^18",
+          "react-redux": "^8.1.3",
+          "react-toastify": "^10.0.4",
+          "redux": "^4.2.1",
+          "sharp": "^0.33.3",
+          "swr": "^2.2.5",
+          "yup": "^1.3.2"
+     },
+     "devDependencies": {
+          "@types/jsonwebtoken": "^9.0.6",
+          "@types/node": "^20",
+          "@types/react": "^18",
+          "@types/react-dom": "^18",
+          "autoprefixer": "^10.0.1",
+          "eslint": "^8",
+          "eslint-config-next": "14.0.1",
+          "postcss": "^8",
+          "tailwindcss": "^3.3.0",
+          "typescript": "^5"
+     }
 }
