--- a/package.json
+++ b/package.json
@@ -39,8 +39,14 @@
           "@types/react": "^18",
           "@types/react-dom": "^18",
           "autoprefixer": "^10.0.1",
-          "eslint": "^8",
+          "eslint": "^8.2.0",
+          "eslint-config-airbnb": "^19.0.4",
+          "eslint-config-airbnb-base": "^15.0.0",
           "eslint-config-next": "14.0.1",
+          "eslint-plugin-import": "^2.25.2",
+          "eslint-plugin-jsx-a11y": "^6.5.1",
+          "eslint-plugin-react": "^7.28.0",
+          "eslint-plugin-react-hooks": "^4.3.0",
           "postcss": "^8",
           "tailwindcss": "^3.3.0",
           "typescript": "^5"
