--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=duchung_secret
 ACCESS_TOKEN_SECRET = "duchung_access_token"
+
+GOOGLE_CLIENT_ID = "201976216712-dlokbrtihpgj5mfi2e4ltj9bghq56ond.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET = "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"
+
