--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,11 @@
           "browser": true,
           "es2021": true
      },
-     "extends": ["plugin:react/recommended", "airbnb"],
+     "extends": [
+          "plugin:react/recommended",
+          "airbnb",
+          "plugin:@typescript-eslint/recommended"
+     ],
      "parserOptions": {
           "ecmaFeatures": {
                "jsx": true
@@ -14,6 +18,9 @@
           "ecmaVersion": 12,
           "sourceType": "module"
      },
-     "plugins": ["react"],
-     "rules": {}
+     "plugins": ["react", "@typescript-eslint"],
+     "rules": {
+          "react/no-unescaped-entities": "off",
+          "@next/next/no-page-custom-font": "off"
+     }
 }
