--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
           "react": "^18",
           "react-dom": "^18",
           "react-redux": "^8.1.3",
-          "react-toastify": "^10.0.4",
+          "react-toastify": "^10.0.5",
           "redux": "^4.2.1",
           "sharp": "^0.33.3",
           "swr": "^2.2.5",
@@ -35,6 +35,7 @@
      },
      "devDependencies": {
           "@types/jsonwebtoken": "^9.0.6",
+          "@types/next": "^9.0.0",
           "@types/node": "^20",
           "@types/react": "^18",
           "@types/react-dom": "^18",
