--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,11 @@
-// {
-//   "extends": "next/core-web-vitals"
-// }
 {
      "env": {
           "browser": true,
           "es2021": true
      },
-     "extends": [
-          "plugin:react/recommended",
-          "airbnb",
-          "plugin:@typescript-eslint/recommended"
-     ],
+
+     "extends": "next/core-web-vitals",
+
      "parserOptions": {
           "ecmaFeatures": {
                "jsx": true
