--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
           "@types/node": "^20",
           "@types/react": "^18",
           "@types/react-dom": "^18",
+          "@typescript-eslint/eslint-plugin": "^6.21.0",
+          "@typescript-eslint/parser": "^6.21.0",
           "autoprefixer": "^10.0.1",
           "eslint": "^8.2.0",
           "eslint-config-airbnb": "^19.0.4",
