--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
           "@reduxjs/toolkit": "^1.9.7",
           "@tailwindcss/forms": "^0.5.7",
           "@tanstack/react-query": "^5.8.1",
+          "@vercel/speed-insights": "^1.0.10",
           "axios": "^1.6.1",
           "formik": "^2.4.5",
           "jsonwebtoken": "^9.0.2",
