--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
           "next": "14.0.1",
           "next-auth": "^4.24.5",
           "next-client-cookies": "^1.0.6",
+          "openai": "^4.33.1",
           "react": "^18",
           "react-dom": "^18",
           "react-redux": "^8.1.3",
