--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "@tailwindcss/forms": "^0.5.7",
         "@tanstack/react-query": "^5.8.1",
         "@vercel/speed-insights": "^1.0.10",
+        "clsx": "^2.1.1",
         "formik": "^2.4.5",
+        "framer-motion": "^11.2.0",
         "next": "14.0.1",
         "next-auth": "^4.24.5",
         "next-client-cookies": "^1.0.6",
@@ -26,6 +28,7 @@
         "react-dom": "^18",
         "react-toastify": "^10.0.5",
         "sharp": "^0.33.3",
+        "tailwind-merge": "^2.3.0",
         "yup": "^1.3.2"
     },
     "devDependencies": {
