--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
         "framer-motion": "^11.2.0",
         "next": "14.0.1",
         "next-auth": "^4.24.5",
-        "next-client-cookies": "^1.0.6",
+        "next-client-cookies": "^1.1.1",
         "openai": "^4.33.1",
         "react": "^18",
         "react-dom": "^18",
         "react-toastify": "^10.0.5",
         "sharp": "^0.33.3",
+        "socket.io-client": "^4.7.5",
         "tailwind-merge": "^2.3.0",
         "yup": "^1.3.2"
     },
